no episodes handled

--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -25,7 +25,8 @@
           <label class="form-check-label" for="dark_theme">
             {% if profile_form.dark_theme.value %}
             <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" checked /> {% else %}
-            <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" /> {% endif %} Use dark theme
+            <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" /> {% endif %}
+            Use dark theme
           </label>
           <button type="submit" class="btn-dope active settings-save">Save</button>        
         </div>
