tweaked episode parser; pubDate no longer mandatory since some pods don't use it (grrr)

--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -52,7 +52,11 @@
                 {% endif %}
               </td>
               <td>
-                {{ episode.pubDate|date:"d-m-Y H:i" }}
+                {% if episode.pubDate %}
+                  {{ episode.pubDate|date:"d-m-Y H:i" }}
+                {% else %}
+                  N/A
+                {% endif %}
               </td>
               <td>
                 {% if episode.size %}
