--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -31,7 +31,7 @@
         <i class="fas fa-angle-down" title="Up"></i>
       </button>
       <div class="row">
-        <div class="col-12 order-3 col-md-6 order-md-2" id="left">
+        <div class="col-12 order-3 col-lg-6 order-lg-2" id="left">
           <!-- CHARTS -->
           <div class="row" id="charts">
             {% if charts %} {% with charts as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
@@ -43,7 +43,7 @@
             {% block center-stage %} {% endblock %}
           </div>
         </div>
-        <div class="col-12 order-2 col-md-6 order-md-3" id="right">
+        <div class="col-12 order-2 col-lg-6 order-lg-3" id="right">
           <!-- LAST PLAYED -->
           <div class="row" id="last-played">
             {% if last_played %} {% with last_played as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
