--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -17,72 +17,7 @@
     {% if results.podcast %}
       {% include "showpod.min.html" %}
     {% endif %}
-    {% if results.alphabet %}
-      <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
-        <div class="options-buttons">
-          {% if results.alphabet_nix_url %}
-            <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}">
-              <i class="fas fa-times" title="Undo Selection"></i>
-            </a>
-          {% endif %}
-          {% for alphabet in results.alphabet %}
-            {% if alphabet.1 %}
-              <a class="btn-dope options-button" href="{{ alphabet.1 }}">
-                {{ alphabet.0 }}
-              </a>
-            {% else %}
-              <button class="btn-dope active">
-                {{ alphabet.0 }}
-              </button>
-            {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-    {% endif %}
-    {% if results.genres %}
-      <div class="collapse fade options-collapse" id="genre-collapse-{{ results.view }}">
-        <div class="options-buttons">
-          {% if results.genre_nix_url %}
-            <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
-              <i class="fas fa-times" title="Undo Selection"></i>
-            </a>
-          {% endif %}
-          {% for genre in results.genres %}
-            {% if genre.1 %}
-              <a class="btn-dope options-button" href="{{ genre.1 }}">
-                {{ genre.0 }}
-              </a>
-            {% else %}
-              <button class="btn-dope active">
-                {{ genre.0 }}
-              </button>
-            {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-    {% endif %}
-    {% if results.languages %}
-      <div class="collapse fade options-collapse" id="language-collapse-{{ results.view }}">
-        <div class="options-buttons">
-          {% if results.language_nix_url %}
-            <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
-              <i class="fas fa-times" title="Undo Selection"></i>
-            </a>
-          {% endif %}
-          {% for language in results.languages %}
-            {% if language.1 %}
-              <a class="btn-dope options-button" href="{{ language.1 }}">
-                {{ language.0 }}
-              </a>
-            {% else %}
-              <button class="btn-dope active">
-                {{ language.0 }}
-              </button>
-            {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-    {% endif %}
+
     <div class="col-12 results-content">
       {% if results.view == "splash" %}
         {% include "splash.min.html" %}
@@ -94,7 +29,7 @@
         {% include "charts.min.html" %}
       {% elif results.view == "subscriptions" %}
         {% include "subscriptions.min.html" %}
-      {% elif results.view == "showpod" or results.view == "episodes" or results.view == "playlist" %}
+      {% elif results.view == "showpod" or results.view == "playlist" %}
         {% include "episodes.min.html" %}
       {% elif results.view == "last_played"%}
         {% include "last_played.min.html" %}
@@ -104,6 +39,7 @@
         {% include "password_reset.min.html" %}
       {% endif %}
     </div>
+    
   </div>
 </div>
 {% endblock %}
