--- a/index/static/style.css
+++ b/index/static/style.css
@@ -182,6 +182,7 @@ a:hover {
   box-shadow: inset rgba(0, 0, 0, .2) -1px -1px 5px, inset rgba(0, 0, 0, .2) 1px 1px 5px;
 }
 .dope-wrapper {
+  margin: auto;
   text-align: center;
   padding: 10px;
 }
