--- a/index/templates/password_reset.html
+++ b/index/templates/password_reset.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12 dope-wrapper">
+  <div class="col-12 col-lg-4 dope-wrapper">
     {% if results.view == "reset_password" %}
       {% if errors.general %}
       <p>The password reset link was invalid, possibly because it has already been used. Please request a new
@@ -33,6 +33,11 @@
       {% endif %}
     {% elif results.view == "password_reset" %}
       <p>Your password is now changed.</p>
+      <p>
+        <a class="login-link" href="/?view=login">
+          Login
+        </a>
+      </p>          
     {% elif results.view == "confirm_email" %}
       <p>Your email is now confirmed.</p>
     {% endif %}
