--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -1,7 +1,7 @@
 <div class="col results-buttons">
   {% if results.view == "showpod" %}
     {% if user.is_authenticated %}
-      <form class="d-inline subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
+      <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
         {% csrf_token %}
         <input type="hidden" name="podids[]" value="{{ results.podcast.podid }}"> 
         {% if results.podcast.is_subscribed %}
