--- a/index/templates/password_reset.html
+++ b/index/templates/password_reset.html
@@ -16,12 +16,12 @@
         </p>
         <form class="password-reset-form" method="POST" action="{% url 'password_reset_from_key' uidb36=uidb36 key=key %}">
           {% csrf_token %}
-          <div class="login-form-group">
+          <div class="dope-form-group">
             <label class="sr-only" for="reset-password1">Password</label>
             <input class="dope-field" type="password" name="password1" placeholder="Password" required id="reset-password1">
           </div>
           <div class="form-row">
-            <div class="col login-form-group">
+            <div class="col dope-form-group">
               <label class="sr-only" for="reset-password2">Password (again)</label>
               <input class="dope-field" type="password" name="password2" placeholder="Password (again)" required="" id="reset-password2">
             </div>
