--- a/index/templates/errors.html
+++ b/index/templates/errors.html
@@ -1,11 +1,13 @@
 {% for k, v in errors.items %}
 <p class="color-1-trans">
+  <i class="fas fa-times" title="Error"></i>
   {{ v }}
 </p>
 {% endfor %}
 
 {% if message %}
   <p class="color-1-trans">
+    <i class="fas fa-check" title="Done"></i>
     {{ message }}
   </p>
 {% endif %}
