--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -1,5 +1,11 @@
 <div class="row">
   <div class="col-12 col-lg-4 dope-wrapper">
+    <form class="change-password-form" action="{% url 'change_password' %}" method="POST">
+      {% csrf_token %}
+      <button class="btn-dope active" type="submit">
+        Change Password
+      </button>
+    </form>
   </div>
   <div class="col-12 col-lg-4 dope-wrapper">
     {% if errors or message %}
@@ -8,34 +14,34 @@
       </div>
     {% endif %}
     <form class="settings-form" action="{% url 'settings' %}" method="POST">
-      <div class="login-form-group">
-        <label for="email">Email</label>
-        <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}">
-      </div>
-      <div class="login-form-group">
-        <label for="location">Location</label>
-        <input class="dope-field" type="text" name="location" id="location" value="{{ profile_form.location.value }}">
-      </div>
-      <div class="login-form-group">
-        <label for="bio">Bio</label>
-        <textarea class="dope-field" rows="3" name="bio" maxlength="500" id="bio">{{ profile_form.bio.value }}</textarea>
-      </div>
-      <div class="login-form-group">
-        <div class="form-check">
-          <label class="form-check-label" for="dark_theme">
-            {% if profile_form.dark_theme.value %}
-            <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" checked /> {% else %}
-            <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" /> {% endif %}
-            Use dark theme
-          </label>
-          <button type="submit" class="btn-dope active settings-save">Save</button>        
+      {% csrf_token %}
+      <div class="form-row">
+        <div class="col-12 dope-form-group">
+          <label for="email">Email</label>
+          <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}">
+        </div>
+        <div class="col-12 dope-form-group">
+          <label for="theme">Theme</label>
+          {% if profile_form.dark_theme.value %}
+            <input class="theme" type="hidden" name="theme" value="light" />
+            <button class="btn-dope">Light</button>
+            <button class="btn-dope active">Dark</button>
+          {% else %}
+            <input class="theme" type="hidden" name="theme" value="dark" />
+            <button class="btn-dope active">Light</button>
+            <button class="btn-dope">Dark</button>
+          {% endif %}
         </div>
       </div>
     </form>
   </div>
   <div class="col-12 col-lg-4 dope-wrapper">
-    <a class="btn-dope solong" href="{% url 'solong' %}">
-      Delete Account
-    </a>
+    <p>Delete account? Your playlist and subscriptions will be lost forever.</p>
+    <form class="solong-form" action="{% url 'solong' %}" method="POST">
+      {% csrf_token %}
+      <button class="btn-dope active" type="submit">
+        Delete Account
+      </button>
+    </form>
   </div>
 </div>
