--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -1,4 +1,4 @@
-<div class="col results-buttons">
+<div class="col order-1 order-md-2 results-buttons">
   {% if results.view == "showpod" %}
     {% if user.is_authenticated %}
       <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
@@ -23,14 +23,14 @@
     </a>
   {% endif %}
   {% if results.view == "grid" or results.view == "list" %} {% if results.view == "grid" %}
-  <a class="btn-dope view-button active" href="{{ results.view_url }}">
-    <span data-view="list">
-      <i class="fas fa-th" title="Toggle View"></i>
-    </span>
-    <span class="d-none" data-view="grid">
-      <i class="fas fa-bars" title="Toggle View"></i>
-    </span>
-  </a>
+    <a class="btn-dope view-button active" href="{{ results.view_url }}">
+      <span data-view="list">
+        <i class="fas fa-th" title="Toggle View"></i>
+      </span>
+      <span class="d-none" data-view="grid">
+        <i class="fas fa-bars" title="Toggle View"></i>
+      </span>
+    </a>
   {% elif results.view == "list" %}
   <a class="btn-dope view-button active" href="{{ results.view_url }}">
     <span class="d-none" data-view="list">
@@ -85,12 +85,69 @@
     Unsubscribe
   </a>
   {% endif %} {% if results.view == "playlist" %}
-  <a class="btn-dope update-playlist" href="{% url 'playlist' %}">
+  <a class="btn-dope options-button" href="{% url 'playlist' %}">
     <i class="fas fa-sync" title="Update"></i>
   </a>
   {% endif %} {% if results.view == "last_played" %}
-  <a class="btn-dope update-last-played" href="{% url 'last_played' %}">
+  <a class="btn-dope options-button" href="{% url 'last_played' %}">
     <i class="fas fa-sync" title="Update"></i>
   </a>
+  {% endif %}
+</div>
+<div class="col-12 order-2 order-md-3 px-0">
+  {% if results.alphabet %}
+    <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
+      <div class="options-buttons">
+        {% if results.alphabet_nix_url %}
+        <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}">
+          <i class="fas fa-times" title="Undo Selection"></i>
+        </a>
+        {% endif %} {% for alphabet in results.alphabet %} {% if alphabet.1 %}
+        <a class="btn-dope options-button" href="{{ alphabet.1 }}">
+          {{ alphabet.0 }}
+        </a>
+        {% else %}
+        <button class="btn-dope active">
+          {{ alphabet.0 }}
+        </button>
+        {% endif %} {% endfor %}
+      </div>
+    </div>
+  {% endif %} {% if results.genres %}
+    <div class="collapse fade options-collapse" id="genre-collapse-{{ results.view }}">
+      <div class="options-buttons">
+        {% if results.genre_nix_url %}
+        <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
+          <i class="fas fa-times" title="Undo Selection"></i>
+        </a>
+        {% endif %} {% for genre in results.genres %} {% if genre.1 %}
+        <a class="btn-dope options-button" href="{{ genre.1 }}">
+          {{ genre.0 }}
+        </a>
+        {% else %}
+        <button class="btn-dope active">
+          {{ genre.0 }}
+        </button>
+        {% endif %} {% endfor %}
+      </div>
+    </div>
+  {% endif %} {% if results.languages %}
+    <div class="collapse fade options-collapse" id="language-collapse-{{ results.view }}">
+      <div class="options-buttons">
+        {% if results.language_nix_url %}
+        <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
+          <i class="fas fa-times" title="Undo Selection"></i>
+        </a>
+        {% endif %} {% for language in results.languages %} {% if language.1 %}
+        <a class="btn-dope options-button" href="{{ language.1 }}">
+          {{ language.0 }}
+        </a>
+        {% else %}
+        <button class="btn-dope active">
+          {{ language.0 }}
+        </button>
+        {% endif %} {% endfor %}
+      </div>
+    </div>
   {% endif %}
 </div>
