--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -3,68 +3,11 @@
   {% include "pagination.min.html" %}
   {% endif %}
   {% include "results_buttons.min.html" %}
-  {% if results.alphabet %}
-  <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
-    <div class="options-buttons">
-      {% if results.alphabet_nix_url %}
-      <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}">
-        <i class="fas fa-times" title="Undo Selection"></i>
-      </a>
-      {% endif %} {% for alphabet in results.alphabet %} {% if alphabet.1 %}
-      <a class="btn-dope options-button" href="{{ alphabet.1 }}">
-        {{ alphabet.0 }}
-      </a>
-      {% else %}
-      <button class="btn-dope active">
-        {{ alphabet.0 }}
-      </button>
-      {% endif %} {% endfor %}
-    </div>
-  </div>
-  {% endif %} {% if results.genres %}
-  <div class="collapse fade options-collapse" id="genre-collapse-{{ results.view }}">
-    <div class="options-buttons">
-      {% if results.genre_nix_url %}
-      <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
-        <i class="fas fa-times" title="Undo Selection"></i>
-      </a>
-      {% endif %} {% for genre in results.genres %} {% if genre.1 %}
-      <a class="btn-dope options-button" href="{{ genre.1 }}">
-        {{ genre.0 }}
-      </a>
-      {% else %}
-      <button class="btn-dope active">
-        {{ genre.0 }}
-      </button>
-      {% endif %} {% endfor %}
-    </div>
-  </div>
-  {% endif %} {% if results.languages %}
-  <div class="collapse fade options-collapse" id="language-collapse-{{ results.view }}">
-    <div class="options-buttons">
-      {% if results.language_nix_url %}
-      <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
-        <i class="fas fa-times" title="Undo Selection"></i>
-      </a>
-      {% endif %} {% for language in results.languages %} {% if language.1 %}
-      <a class="btn-dope options-button" href="{{ language.1 }}">
-        {{ language.0 }}
-      </a>
-      {% else %}
-      <button class="btn-dope active">
-        {{ language.0 }}
-      </button>
-      {% endif %} {% endfor %}
-    </div>
-  </div>
-  {% endif %}
 </div>
-
-
 {% if results.podcasts1 %}
   <div class="row collapse fade view-collapse {% if results.view == 'grid' %}show{% endif %}">
     {% for podcast in results.podcasts1 %}
-    <div class="col-lg-2 col-md-3 col-4 result-box">
+    <div class="col-lg-2 col-md-3 col-4 search-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
@@ -83,7 +26,7 @@
     </div>
     {% endfor %}
     {% for podcast in results.podcasts2 %}
-    <div class="col-lg-2 col-md-3 col-4 result-box">
+    <div class="col-lg-2 col-md-3 col-4 search-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
@@ -102,7 +45,7 @@
     </div>
     {% endfor %}
     {% for podcast in results.podcasts3 %}
-    <div class="col-lg-2 col-md-3 col-4 result-box">
+    <div class="col-lg-2 col-md-3 col-4 search-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
@@ -121,7 +64,7 @@
     </div>
     {% endfor %}
     {% for podcast in results.podcasts4 %}
-    <div class="col-lg-2 col-md-3 col-4 result-box">
+    <div class="col-lg-2 col-md-3 col-4 search-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
