--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -4,39 +4,37 @@
 <div class="row">
   {% for subscription in results.podcasts %}
     {% with subscription.podcast as podcast %}
-      <div class="col-12 col-md-4 subscriptions-box">
-        <div class="subscriptions-result clearfix" data-podid="{{ podcast.podid }}">
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
-            <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
-            onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.title }}" />
-          </a>
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
-            <h1>
-              <strong>
-                {{ podcast.title }}
-              </strong>
-            </h1>
-          </a>
-          <p>
-            Last updated:
-            {% if subscription.last_updated %}
-              {{ subscription.last_updated|date:"d-m-Y H:i" }}
-            {% else %}
-              Never
-            {% endif %}
-          </p>
-          <div class="subscriptions-buttons">
-            <form class="d-inline subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="podids[]" value="{{ podcast.podid }}">
-              <button type="submit" class="btn-dope">
-                <i class="fas fa-times" title="Unsubscribe"></i>
-              </button>
-            </form>
-            <button class="btn-dope select-subscription">
-              <i class="fas fa-check" title="Select"></i>
+      <div class="col-12 col-md-4 subscriptions-result clearfix" data-podid="{{ podcast.podid }}">
+        <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
+          <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
+          onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.title }}" />
+        </a>
+        <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
+          <h1>
+            <strong>
+              {{ podcast.title }}
+            </strong>
+          </h1>
+        </a>
+        <p>
+          Last updated:
+          {% if subscription.last_updated %}
+            {{ subscription.last_updated|date:"d-m-Y H:i" }}
+          {% else %}
+            Never
+          {% endif %}
+        </p>
+        <div class="subscriptions-buttons">
+          <form class="d-inline subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="podids[]" value="{{ podcast.podid }}">
+            <button type="submit" class="btn-dope">
+              <i class="fas fa-times" title="Unsubscribe"></i>
             </button>
-          </div>
+          </form>
+          <button class="btn-dope select-subscription">
+            <i class="fas fa-check" title="Select"></i>
+          </button>
         </div>
       </div>
     {% endwith %}
