--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-12 col-lg-4 dope-wrapper">
+  <div class="col-12 order-2 col-lg-4 order-lg-1 splash-wrapper">
   </div>
-  <div class="col-12 col-lg-4 dope-wrapper">
+  <div class="col-12 order-1 col-lg-4 order-lg-2 splash-wrapper">
     <p>
       {% with user.subscription.count as count %}
         You have {{ count }}
@@ -19,6 +19,6 @@
       {% endwith %}
     </p>
   </div>
-  <div class="col-12 col-lg-4 dope-wrapper">
+  <div class="col-12 order-3 col-lg-4 splash-wrapper">
   </div>
 </div>
