--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-12 order-2 col-lg-4 order-lg-1 dope-wrapper">
+  <div class="col-12 order-2 col-lg-4 order-lg-1 splash-wrapper">
   </div>
-  <div class="col-12 order-1 col-lg-4 order-lg-2 dope-wrapper">
+  <div class="col-12 order-1 col-lg-4 order-lg-2 splash-wrapper">
     <h1>
       <strong>
         Discover and listen to thousands of free podcasts on
@@ -400,6 +400,6 @@
       </a>
     </div>
   </div>
-  <div class="col-12 order-3 col-lg-4 dope-wrapper">
+  <div class="col-12 order-3 col-lg-4 splash-wrapper">
   </div>
 </div>
